added alert service and entity dashboard to this template

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
     {
       "type": "chrome",
       "request": "attach",
+      "port": 9222,
       "name": "Attach Chrome",      
       "webRoot": "${workspaceFolder}",
       "urlFilter": "https://localhost:4200/*"
