--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "@ngx-translate/core": "11.0.0",
     "@ngx-translate/http-loader": "4.0.0",
+    "@types/lodash": "^4.14.123",
     "chart.js": "2.7.3",
     "core-js": "2.5.7",
     "font-awesome": "4.7.0",
+    "lodash": "^4.17.11",
     "ng2-charts": "1.6.0",
     "rxjs": "6.3.3",
     "yarn": "1.12.1",
